--- a/index.html
+++ b/index.html
@@ -1,36 +1,44 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<title> Anory </title>
-	<link href="CSS/AnoryStyle.css"rel="stylesheet" type="text/css" >
-</head>
-<body>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="CSS/ProjectStyle.css">
+		<title> Welcome to Emy's Proj </title>
+	</head>
+	<body>
+		<h1 class="text"> See Pamphlet </h1>
+		<br />
+			<img class="pamphlet" src="Images/Pamphlet-1.png">
+		<br />
 
-	<h1 class="mainheader"> The Anory </h1>
-<div class="contentbox">
-	<p class="mainheaderinfo"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean quam libero, hendrerit ut varius non, accumsan pulvinar eros. Praesent luctus ut libero ac vestibulum. Nunc auctor dapibus nibh, nec accumsan urna euismod eget. Fusce eu nunc luctus, mattis diam quis, efficitur ipsum. Suspendisse bibendum at urna at interdum. Nullam vitae lorem sed elit dapibus imperdiet. Aenean condimentum, justo id iaculis faucibus, metus erat vestibulum felis, vel tincidunt lacus risus et sapien. Donec vitae ex in tellus dignissim aliquet. Fusce sed leo nec leo rhoncus varius. </p>
+		<h1 class="text"> References</h1>
+		<ul>
+			<li>
+				<a href="https://education.nationalgeographic.org/resource/el-nino">https://education.nationalgeographic.org/resource/el-nino</a>
+			</li>
+			<li>
+				<a href="https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk">https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk</a>
+			</li>
+			<li>
+				<a href="https://climate.nasa.gov/effects/?fbclid=IwAR0crfxhxa3MMsg131w3oFkKJkSPdozwIvJXLZHuycnK_7MndllhtKA2oNw">https://climate.nasa.gov/effects/?fbclid=IwAR0crfxhxa3MMsg131w3oFkKJkSPdozwIvJXLZHuycnK_7MndllhtKA2oNw</a>
+			</li>
+			<li>
+				<a href="https://doh.gov.ph/Health-Advisory/El-Nino-phenomenon?fbclid=IwAR3Slvvoo3beENluv2PccVfMozdChNR0sQ53-iWFn_8NL90WFPwLblEWX1Y">https://doh.gov.ph/Health-Advisory/El-Nino-phenomenon?fbclid=IwAR3Slvvoo3beENluv2PccVfMozdChNR0sQ53-iWFn_8NL90WFPwLblEWX1Y</a>
+			</li>
+			<li>
+				<a href="https://web.archive.org/web/20090827143632/http://www.cpc.noaa.gov/products/analysis_monitoring/ensostuff/ensofaq.shtml#DIFFER">https://web.archive.org/web/20090827143632/http://www.cpc.noaa.gov/products/analysis_monitoring/ensostuff/ensofaq.shtml#DIFFER</a>
+			</li>
+			<li>
+				<a href="https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s">https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s</a>
+			</li>
+			<li>
+				<a href="https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s">https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s</a>
+			</li>
+			<li>
+				<a href="https://ggweather.com/enso/oni.htm?fbclid=IwAR3EeBZSGT5YHZIfrvk1Z9OBV_7C51C3Bl_zZru5ogKF757WT5XiS3mmfoU">https://ggweather.com/enso/oni.htm?fbclid=IwAR3EeBZSGT5YHZIfrvk1Z9OBV_7C51C3Bl_zZru5ogKF757WT5XiS3mmfoU</a>
+			</li>
+		</ul>
 
-	<div class="malnourishedphotos"> 
-		<img src="Images/Anorexicperson.png">
-	</div>
-
-	<div class="info">
-		<h2 class="header"> The Goal Of The Anory </h2>
-		<p> Sed ac enim maximus, blandit augue in, tristique quam. Aliquam gravida odio ut pretium aliquet. Nulla vehicula justo ex, accumsan tincidunt mauris luctus eu. Fusce odio urna, tincidunt eu congue vitae, ultrices nec tortor. Praesent vitae volutpat velit. Duis varius, nunc in feugiat pellentesque, dolor velit suscipit enim, quis vehicula lectus ipsum eget arcu. Integer posuere, neque eget congue cursus, odio sapien finibus lectus, vitae dignissim erat diam non lorem.</p>
-		<h3 class="header"> Why? </h3>
-		<p>Sed ac enim maximus, blandit augue in, tristique quam. Aliquam gravida odio ut pretium aliquet. Nulla vehicula justo ex, accumsan tincidunt mauris luctus eu. Fusce odio urna, tincidunt eu congue vitae, ultrices nec tortor. Praesent vitae volutpat velit. Duis varius, nunc in feugiat pellentesque, dolor velit suscipit enim, quis vehicula lectus ipsum eget arcu. Integer posuere, neque eget congue cursus, odio sapien finibus lectus, vitae dignissim erat diam non lorem.</p>
-	</div>
-</div>
-
-	<div class="Moreanory footer">
-		<a  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Products </a>
-		<a  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Our 0<sub>2</sub> Line of Merch </a>
-		<a  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Newsletter </a>
-		<a  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Support Us </a>
-		<a  href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> Join Us </a>
-		<a href="https://youtube.com" target="_blank"> More About The Anory Project </a>
-
-	</div>
-</body>
+	</body>
 </html>
+
