Centered and Fixed Links

--- a/index.html
+++ b/index.html
@@ -4,40 +4,41 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="CSS/ProjectStyle.css">
 		<title> Welcome to Emy's Proj </title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
+
 	<body>
 		<h1 class="text"> See Pamphlet </h1>
 		<br />
-			<img class="pamphlet" src="Images/Pamphlet-1.png">
+			<img class="pamphlet" src="Images/Pamphlet-1.png" alt="Pamphlet" >
 		<br />
 
 		<h1 class="text"> References</h1>
+	<div class="link">
 		<ul>
 			<li>
-				<a href="https://education.nationalgeographic.org/resource/el-nino">https://education.nationalgeographic.org/resource/el-nino</a>
+				<a href="https://education.nationalgeographic.org/resource/el-nino">El Niño bt National Geographic</a>
 			</li>
 			<li>
-				<a href="https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk">https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk</a>
+				<a href="https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk">Climate Chnage and ENSO</a>
 			</li>
 			<li>
-				<a href="https://climate.nasa.gov/effects/?fbclid=IwAR0crfxhxa3MMsg131w3oFkKJkSPdozwIvJXLZHuycnK_7MndllhtKA2oNw">https://climate.nasa.gov/effects/?fbclid=IwAR0crfxhxa3MMsg131w3oFkKJkSPdozwIvJXLZHuycnK_7MndllhtKA2oNw</a>
+				<a href="https://climate.nasa.gov/effects/?fbclid=IwAR0crfxhxa3MMsg131w3oFkKJkSPdozwIvJXLZHuycnK_7MndllhtKA2oNw">The Effects of Climate Change</a>
 			</li>
 			<li>
-				<a href="https://doh.gov.ph/Health-Advisory/El-Nino-phenomenon?fbclid=IwAR3Slvvoo3beENluv2PccVfMozdChNR0sQ53-iWFn_8NL90WFPwLblEWX1Y">https://doh.gov.ph/Health-Advisory/El-Nino-phenomenon?fbclid=IwAR3Slvvoo3beENluv2PccVfMozdChNR0sQ53-iWFn_8NL90WFPwLblEWX1Y</a>
+				<a href="https://doh.gov.ph/Health-Advisory/El-Nino-phenomenon?fbclid=IwAR3Slvvoo3beENluv2PccVfMozdChNR0sQ53-iWFn_8NL90WFPwLblEWX1Y">El Niño Phenomenon</a>
 			</li>
 			<li>
-				<a href="https://web.archive.org/web/20090827143632/http://www.cpc.noaa.gov/products/analysis_monitoring/ensostuff/ensofaq.shtml#DIFFER">https://web.archive.org/web/20090827143632/http://www.cpc.noaa.gov/products/analysis_monitoring/ensostuff/ensofaq.shtml#DIFFER</a>
+				<a href="https://web.archive.org/web/20090827143632/http://www.cpc.noaa.gov/products/analysis_monitoring/ensostuff/ensofaq.shtml#DIFFER">Frequently Asked Questions About El Niño and La Niña</a>
 			</li>
 			<li>
-				<a href="https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s">https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s</a>
+				<a href="https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s">El Niña and its helth impact</a>
 			</li>
 			<li>
-				<a href="https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s">https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s</a>
-			</li>
-			<li>
-				<a href="https://ggweather.com/enso/oni.htm?fbclid=IwAR3EeBZSGT5YHZIfrvk1Z9OBV_7C51C3Bl_zZru5ogKF757WT5XiS3mmfoU">https://ggweather.com/enso/oni.htm?fbclid=IwAR3EeBZSGT5YHZIfrvk1Z9OBV_7C51C3Bl_zZru5ogKF757WT5XiS3mmfoU</a>
+				<a href="https://ggweather.com/enso/oni.htm?fbclid=IwAR3EeBZSGT5YHZIfrvk1Z9OBV_7C51C3Bl_zZru5ogKF757WT5XiS3mmfoU">El Niño and La Niña YEars and Intensities</a>
 			</li>
 		</ul>
+	</div>
 
 	</body>
 </html>
