--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<a href="https://education.nationalgeographic.org/resource/el-nino">El Niño bt National Geographic</a>
 			</li>
 			<li>
-				<a href="https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk">Climate Chnage and ENSO</a>
+				<a href="https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk">Climate Change and ENSO</a>
 			</li>
 			<li>
 				<a href="https://climate.nasa.gov/effects/?fbclid=IwAR0crfxhxa3MMsg131w3oFkKJkSPdozwIvJXLZHuycnK_7MndllhtKA2oNw">The Effects of Climate Change</a>
