--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 		<br />
 			<img class="pamphlet" src="Images/Pamphlet-1.png" alt="Pamphlet" >
 		<br />
+			<img class="pamphlet" src="Images/Pamphlet-2.png" alt="Pamphlet-2">
 
 		<h1 class="text"> References</h1>
 	<div class="link">
 		<ul>
 			<li>
-				<a href="https://education.nationalgeographic.org/resource/el-nino">El Niño bt National Geographic</a>
+				<a href="https://education.nationalgeographic.org/resource/el-nino">El Niño by National Geographic</a>
 			</li>
 			<li>
 				<a href="https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk">Climate Change and ENSO</a>
