--- a/index.html
+++ b/index.html
@@ -40,7 +40,18 @@
 			</li>
 		</ul>
 	</div>
-
+	<div class="info">
+			<p>Author: Jeremy Pocaan 10-St.La Salle</p>
+			<ul> Teachers:
+				<li>Mr. Marco Paulo Noda</li>
+				<li>Mr. Lorenzo Obido</li>
+				<li>Mr. Aldrin Pauyo</li>
+				<li>Mr. Joey Ingua</li>
+				<li>Ms. Lyka Madrona</li>
+				<li>Ms. Jurmane Nota</li>
+				<li>Ms. Cary Robles</li>
+			</ul>
+	</div>
 	</body>
 </html>
 
