--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</li>
 		</ul>
 	</div>
-	<div class="info">
+		<div class="info">
 			<p>Author: Jeremy Pocaan 10-St.La Salle</p>
 			<ul> Teachers:
 				<li>Mr. Marco Paulo Noda</li>
@@ -50,8 +50,9 @@
 				<li>Ms. Lyka Madrona</li>
 				<li>Ms. Jurmane Nota</li>
 				<li>Ms. Cary Robles</li>
+				<li>Thank You For Visiting:)</li>
 			</ul>
-	</div>
+		</div>
 	</body>
 </html>
 
