--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 				<a href="https://education.nationalgeographic.org/resource/el-nino">El Niño by National Geographic</a>
 			</li>
 			<li>
-				<a href="https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk">Climate Change and ENSO</a>
+				<a href="https://research.noaa.gov/article/ArtMID/587/ArticleID/2685/New-research-volume-explores-future-of-ENSO-under-influence-of-climate-change?fbclid=IwAR1dsLkVwe0D6tsUMh1FUNfRfvS7DBfitAnwCKQjHWVIkkyCKJ60hXMDvPk" target="_blank">Climate Change and ENSO</a>
 			</li>
 			<li>
-				<a href="https://climate.nasa.gov/effects/?fbclid=IwAR0crfxhxa3MMsg131w3oFkKJkSPdozwIvJXLZHuycnK_7MndllhtKA2oNw">The Effects of Climate Change</a>
+				<a href="https://climate.nasa.gov/effects/?fbclid=IwAR0crfxhxa3MMsg131w3oFkKJkSPdozwIvJXLZHuycnK_7MndllhtKA2oNw" target="_blank">The Effects of Climate Change</a>
 			</li>
 			<li>
-				<a href="https://doh.gov.ph/Health-Advisory/El-Nino-phenomenon?fbclid=IwAR3Slvvoo3beENluv2PccVfMozdChNR0sQ53-iWFn_8NL90WFPwLblEWX1Y">El Niño Phenomenon</a>
+				<a href="https://doh.gov.ph/Health-Advisory/El-Nino-phenomenon?fbclid=IwAR3Slvvoo3beENluv2PccVfMozdChNR0sQ53-iWFn_8NL90WFPwLblEWX1Y" target="_blank">El Niño Phenomenon</a>
 			</li>
 			<li>
-				<a href="https://web.archive.org/web/20090827143632/http://www.cpc.noaa.gov/products/analysis_monitoring/ensostuff/ensofaq.shtml#DIFFER">Frequently Asked Questions About El Niño and La Niña</a>
+				<a href="https://web.archive.org/web/20090827143632/http://www.cpc.noaa.gov/products/analysis_monitoring/ensostuff/ensofaq.shtml#DIFFER" target="_blank">Frequently Asked Questions About El Niño and La Niña</a>
 			</li>
 			<li>
-				<a href="https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s">El Niña and its helth impact</a>
+				<a href="https://www.allcountries.org/health/el_nino_and_its_health_impact.html?fbclid=IwAR27usu1ysvhdFgr2CgFA650FCnlodKYdOPW5v-e5ysFbbu1VyQA0Lf0X9s" target="_blank">El Niña and its helth impact</a>
 			</li>
 			<li>
-				<a href="https://ggweather.com/enso/oni.htm?fbclid=IwAR3EeBZSGT5YHZIfrvk1Z9OBV_7C51C3Bl_zZru5ogKF757WT5XiS3mmfoU">El Niño and La Niña YEars and Intensities</a>
+				<a href="https://ggweather.com/enso/oni.htm?fbclid=IwAR3EeBZSGT5YHZIfrvk1Z9OBV_7C51C3Bl_zZru5ogKF757WT5XiS3mmfoU" target="_blank">El Niño and La Niña YEars and Intensities</a>
 			</li>
 		</ul>
 	</div>
